--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "lyh",
   "license": "ISC",
   "dependencies": {
+    "@types/fs-extra": "^8.1.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6-alpha.6",
